--- a/src/content/blog/gundam-1979/index.mdx
+++ b/src/content/blog/gundam-1979/index.mdx
@@ -2,7 +2,7 @@
 title: 'Mobile Suite Gundam(1979)'
 description: 'After reading Rent a Girlfriend for a long time, I finally discuss Kazuya and Chizuru’s relationship, along with the series strengths and weaknesses.'
 date: 2024-10-01
-tags: ['anime', 'opinion']
+tags: ['anime', 'opinion', 'gundam', 'mobilesuitegundam']
 image: './thumbnail.png'
 authors: ['hokori']
 ---
