--- a/src/content/blog/insomniacs/index.mdx
+++ b/src/content/blog/insomniacs/index.mdx
@@ -4,7 +4,7 @@ description:
   'Insomniacs after School is a breautiful story about finding peace in company
   of eachother'
 date: 2024-11-05
-tags: ['opinion', 'manga']
+tags: ['opinion', 'manga', 'anime', 'insomniacsafterschool']
 image: './thumbnail.png'
 authors: ['hokori']
 ---
