--- a/src/content/blog/rent-a-girlfriend-my-thoughts-after-357-chapters/index.mdx
+++ b/src/content/blog/rent-a-girlfriend-my-thoughts-after-357-chapters/index.mdx
@@ -2,7 +2,7 @@
 title: 'Rent a Girlfriend: My thoughts after 357 chapters'
 description: 'After reading Rent a Girlfriend for a long time, I finally discuss Kazuya and Chizuru’s relationship, along with the series strengths and weaknesses.'
 date: 2024-12-17
-tags: ['opinion', 'manga']
+tags: ['opinion', 'manga', 'rentagirlfriend']
 image: './thumbnail.png'
 authors: ['hokori']
 ---
