Fire Force Manga Added

--- a/src/content/blog/manga-fire-force/index.mdx
+++ b/src/content/blog/manga-fire-force/index.mdx
@@ -2,9 +2,9 @@
 title: 'Thoughts Fire Force Manga'
 description: 'Arijit Singh and Mating Garrix released a sing together and it is really beautiful that I wanted to talk about it'
 date: 2025-05-04
-tags: ['music']
+tags: ['thoughts', 'manga', 'review']
 image: './thumbnail.png'
-authors: ['thoughts', 'manga', 'review']
+authors: ['hokori']
 ---
 
 import Manga1 from 'assets/manga-1.png'
