--- a/src/content/blog/my-favourite-dj-sets/index.mdx
+++ b/src/content/blog/my-favourite-dj-sets/index.mdx
@@ -11,9 +11,9 @@ authors: ['hokori']
 
 > I listen to lot of my music sets from my favorite artists and djs, in this post I am sharing some of my them.
 
-## **_chill house mix in sf_**
+## chill house mix in sf
 
-### **Mayv**
+### Mayv
 
 Imagine you are on a walk in your nearby park and you hear music is playing not something heavy or loud but some calm and cosy music, there are people laughing and talking about the music and getting to know eachother, that what I saw through this set, both songs and vibe are amazing and relaxing you'd be vibing in no time if you are into Chill Deep and melodic house music
 
@@ -27,9 +27,9 @@ Imagine you are on a walk in your nearby park and you hear music is playing not 
   className="my-6 w-full"
 />
 
-## **_Bollywood Sunset Set at Lake Pichola (Udaipur)_**
+## Bollywood Sunset Set at Lake Pichola (Udaipur)
 
-### **DJ NYK**
+### DJ NYK
 
 This is the set that introduced me to this genre of music and made me see that something like this is possible, before this I didn't knew that we can take all the equipments and have a DJ SET at some place where no one would be expecting, I have been listening him for years I can't count and he's amazing as always! He created whole series out of it too!
 
@@ -43,9 +43,9 @@ This is the set that introduced me to this genre of music and made me see that s
   className="my-6 w-full"
 />
 
-## **_Deep House Forest Mix_**
+## Deep House Forest Mix
 
-### **Durante**
+### Durante
 
 I found this set just recently, Durante is someone I know from AnjunaDeep Releases and his music is something that I come back to again and again. I found this set coincidently when I wanted something to listen to im Background, and I was playing it loud. Both my brother and mom enjoyed the set alot and they were both vibing the whole time.
 
@@ -59,9 +59,9 @@ I found this set just recently, Durante is someone I know from AnjunaDeep Releas
   className="my-6 w-full"
 />
 
-## **_Boiler Room: London_**
+## Boiler Room: London
 
-### **Fred Again...**
+### Fred Again...
 
 There was a time I was listening to this set almost everyday, there is something about this set, the energy the music. This was my introduction to Fred Again... I guess that's the case for so many people. And after this his collaborations with Skrillex (who I'm really big fan of) made me realise that this dude is special and unique in his own way! There were so many unreleased songs which he released from time to time after but this whole set was special.... definitely....
 
@@ -75,9 +75,9 @@ There was a time I was listening to this set almost everyday, there is something
   className="my-6 w-full"
 />
 
-## **_Live at Anjunadeep Open Air: Prague_**
+## Live at Anjunadeep Open Air: Prague
 
-### **Ben Böhmer**
+### Ben Böhmer
 
 Ben Böhmer is someone I found when I was exploring the Melodic House genre. This particular set isn't just visually chill but showcases his sound. Which is Unique in it's own way. This whole for me is his best songs, although yes there are other sets from him I like but my memory of when I heard this set makes it special for me!
 
@@ -91,9 +91,9 @@ Ben Böhmer is someone I found when I was exploring the Melodic House genre. Thi
   className="my-6 w-full"
 />
 
-## **_LIVE @ SZIGET 2024_**
+## LIVE @ SZIGET 2024
 
-### **Martin Garrix**
+### Martin Garrix
 
 There are so many sets of Martin Garrix that I've listened to but somehow this set is the one that I come back to again and again since it was released. This set has so many mashups and I've listened to this set enough that even when I'm listening to the original songs somehow I think the mashup part will come but yeah that's how much I've listened to this set.
 
