--- a/src/content/blog/manga-fire-force/index.mdx
+++ b/src/content/blog/manga-fire-force/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Thoughts Fire Force Manga'
-description: 'Arijit Singh and Mating Garrix released a sing together and it is really beautiful that I wanted to talk about it'
+description: 'I was finally able to finish this 305 chapter journey. As always I started reading fast but got burnt out. I had to leave it for some time, then it was a slow burn! It was unbearable but I finished!'
 date: 2025-05-04
 tags: ['thoughts', 'manga', 'review']
 image: './thumbnail.png'
