TBV Chapter 30 Added

--- a/src/content/blog/from-older-brother-to-younger-brother/index.mdx
+++ b/src/content/blog/from-older-brother-to-younger-brother/index.mdx
@@ -44,12 +44,12 @@ One of my favorite panels in this whole Sotaro arc reflects this feeling perfect
 
 <div className="grid grid-cols-1 lg:grid-cols-2">
   <img
-    class="!m-0 h-[360px] w-full object-cover"
+    class="m-0! h-[360px] w-full object-cover"
     src={Manga1.src}
     alt="IC Cards"
   />
   <img
-    class="!m-0 h-[360px] w-full object-cover"
+    class="m-0! h-[360px] w-full object-cover"
     src={Manga2.src}
     alt="IC Cards"
   />
